--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,11 @@ body{
     background-color: #fff;
     border-radius: 10px !important;
   }
+
+/*   main>.container {
+    padding: 30px 0;;
+  } */
+
   h1{
     font-weight: 800;
     color: blueviolet;
